<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="sync_dict_url">http://192.168.137.1:802/api/dailycostapi/GetDictList</string>
	<string name="sync_dict_items_url">http://192.168.137.1:802/api/dailycostapi/GetDictItemsList</string>
	<string name="sync_project_url">http://192.168.137.1:802/api/dailycostapi/getprojectlist</string>
	<string name="sync_daily">http://192.168.137.1:802/api/dailycostapi/AddDaily</string>
	
	<string name="list">列表</string>
	<string name="empty_msg">不能为空，请重新输入！</string>
	<string name="error_input_msg">输入有误，请重新输入！</string>
	<string name="sync_base_data">同步基础数据</string>
	<string name="sync_daily_to_server">同步到服务器</string>
	<string name="sync_error">同步失败！</string>
	<string name="sync_start">开始同步&#8230;</string>
	<string name="sync_success">同步成功！</string>	
	<string name="save_success">保存成功！</string>
	<string name="delete_success">删除成功！</string>
	
	<string name="operation">操作</string>
	<string name="daily_add">新增</string>
	<string name="lookup">查看</string>
	<string name="modify">修改</string>
	<string name="delete">删除</string>
	
	<!-- daily -->
	<string name="project">所属项目</string>
	<string name="theme">花费项目</string>
	<string name="date">日期</string>
	<string name="finance_type">财务类型</string>
	<string name="money">金额</string>
	<string name="remark">备注</string>
	<string name="save">保存</string>
	<string name="cancel">取消</string>
</resources>