<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
        <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
        android:id="@+id/tvProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project" />
	    <Spinner
	        android:id="@+id/spProject"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/tvTheme"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/theme" />
	
	    <Spinner
	        android:id="@+id/spTheme"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	
	    <TextView
	        android:id="@+id/tvFinanceType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/finance_type" />
	    <Spinner
	        android:id="@+id/spFinanceType"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    <TextView
	        android:id="@+id/tvForDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/date"
	        android:textIsSelectable="true" />
	    
	    <EditText
	        android:id="@+id/etForDate"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/date"
	        android:inputType="date" />
	    <EditText
	        android:id="@+id/etMoney"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/money" 
	        android:inputType="numberDecimal"/>
	
	    <EditText
	        android:id="@+id/etRemark"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:hint="@string/remark">
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
</LinearLayout>