<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageButton
            android:id="@+id/imgBtnAddDaily"
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:contentDescription="@string/daily_add"
            android:src="@drawable/add" />

        <ImageButton
            android:id="@+id/imgSyncBaseData"
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:contentDescription="@string/sync_base_data"
            android:src="@drawable/reload" />

        <ImageButton
            android:id="@+id/imgBtnUpload"
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:contentDescription="@string/sync_daily"
            android:src="@drawable/arrow_up" />
    </LinearLayout>

</RelativeLayout>