<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/lnlOperate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/save"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-5dp"
            android:layout_marginTop="-4dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/delete"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:text="@string/cancel" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnlOperate"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project" />

            <Spinner
                android:id="@+id/spProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme" />

            <Spinner
                android:id="@+id/spTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvFinanceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finance_type" />

            <Spinner
                android:id="@+id/spFinanceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvForDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textIsSelectable="true" />

            <EditText
                android:id="@+id/etForDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date" />

            <EditText
                android:id="@+id/etMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/money"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/etRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/remark" >
            </EditText>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>